--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,20 @@
-@import "reset.css"
+@import "reset.css";
+@import "status-bar.css";
+@import "header.css";
+@import "nav-bar.css";
+
+*{
+    box-sizing: border-box;
+}
+
+body{
+    background-color: #fff;
+    padding: 10px 20px;
+    color: #020202;
+    font-family: "Open Sans", -apple-system, sans-serif;
+}
+
+a{
+    color:  inherit;
+}
+
