--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -19,3 +19,21 @@
     font-size: 20px;
 }
 
+.nav .nav__list-item{
+    position: relative;
+}
+.nav .nav__badge{
+    position: absolute;
+    top: -7px;
+    right: -7px;
+    color: white;
+    background: #dc5d46;
+    width: 18px;
+    height: 18px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;;
+    font-size: 10px;
+}
