--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@
 @import "status-bar.css";
 @import "header.css";
 @import "nav-bar.css";
+@import "friend.css";
+@import "friends.css";
+@import "find.css";
+@import "more.css";
+@import "settings.css";
+@import "chat.css";
 
 *{
     box-sizing: border-box;
@@ -9,12 +15,13 @@
 
 body{
     background-color: #fff;
-    padding: 10px 20px;
+    padding: 10px 20px 100px;
     color: #020202;
     font-family: "Open Sans", -apple-system, sans-serif;
 }
 
 a{
     color:  inherit;
+    text-decoration: none;
 }
 
