--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -37,3 +37,17 @@
     border-radius: 10px;;
     font-size: 10px;
 }
+
+@keyframes showNav{
+    from{
+        transform: translateY(80px);
+    }
+    to{
+        transform: none;
+    }
+}
+.nav{
+    transform: translateY(80px);
+    animation: showNav 0.5s ease-out forwards;
+    animation-delay: 0.5s;
+}
