--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 @import "more.css";
 @import "settings.css";
 @import "chat.css";
+@import "mobile.css";
 
 *{
     box-sizing: border-box;
@@ -23,5 +24,20 @@ body{
 a{
     color:  inherit;
     text-decoration: none;
+}
+
+@keyframes fadeIn{
+    from{
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+}
+
+main{
+    animation: fadeIn 0.5s ease-in-out;
 }
 
