--- a/css/find.css
+++ b/css/find.css
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
 }
 
 .find  .header-btn__title{
@@ -39,5 +40,3 @@
     opacity: 0.7;
     margin-bottom: 20px;
 }
-
-.
