--- a/css/find.css
+++ b/css/find.css
@@ -1,6 +1,4 @@
-.find{
-    margin-top: 50px;
-}
+
 .find .find__header-list{
     display: flex;
     justify-content: space-around;
@@ -17,6 +15,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    text-align: center;
 }
 
 .find  .header-btn__title{
