--- a/css/friends.css
+++ b/css/friends.css
@@ -4,8 +4,8 @@
 
 .friends .friends__plus{
     padding: 20px 0;
-    border-top: 1px solid #f7f7f7;
-    border-bottom: 1px solid #f7f7f7;
+    border-top: 1px solid #efefef;
+    border-bottom: 1px solid #efefef;
     margin: 20px 0;
 }
 
