--- a/css/more.css
+++ b/css/more.css
@@ -33,8 +33,8 @@
     font-size: 14px;
     opacity: 0.6;
     margin-bottom: 10px;
-    border-bottom: 1px solid #f7f7f7;
-    padding-bottom: 10px;
+    border-top: 1px solid #f7f7f7;
+    padding-top: 10px;
 }
 .more .suggestion__title{
     font-size: 12px;
