--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -51,3 +51,37 @@
     animation: showNav 0.5s ease-out forwards;
     animation-delay: 0.5s;
 }
+@keyframes tongtong{
+    0%{
+        transform: translateY(0px);
+    }
+    5%{
+        transform: translateY(-5px);
+    }
+    10%{
+        transform: translateY(0px);
+    }
+    15%{
+        transform: translateY(-3px);
+    }
+    20%
+    {
+        transform: translateY(0px);
+    }
+    100%
+    {
+        transform: translateY(0px);
+    }
+}
+.nav__badge{
+    animation: tongtong ease-out forwards infinite;
+    animation-duration: 2s;
+}
+
+i{
+    cursor: pointer;
+    transition: 0.2s all;
+}
+i:hover{
+    color: #dc5d46;
+}
