--- a/css/chat.css
+++ b/css/chat.css
@@ -6,21 +6,12 @@
     padding: 0 20px;
     padding-top: 100px;
 }
-.chat-body .header{
-    margin-bottom: 10px;
-}
-.header-wrap{
-    padding: 10px 20px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width:100%;
-    background: url(../img/pattern.png);
-    border-bottom: 1px solid #ddd;
-    z-index: 1;
-}
+
 .chat{
     min-height: 100vh;
+}
+.chat-screen{
+    background: transparent;
 }
 @keyframes float{
     0%{
@@ -114,7 +105,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 30px;
     padding-bottom: 100px;
     min-height: 800px;
 }
@@ -131,11 +121,11 @@
 .message{
     display: flex;
     align-items: flex-start;
-    width: 70%;
+    width: 80%;
     margin-bottom: 10px;
 }
 .message .message__content{
-    width: 80%;
+    max-width: 80%;
 }
 .message .message__bubble{
     box-shadow: 0px 6px 16px rgba(0,0,0,0.2);
@@ -159,6 +149,7 @@
 .sent-message .message__bubble{
     background: linear-gradient(270deg, #bcbed4, #8a8eb1);
     border-radius: 30px 30px 0 30px;
+    word-break: break-all;
 }
 @keyframes spin{
     from{
@@ -181,6 +172,7 @@
     border-radius: 0 30px 30px 30px;
     background: linear-gradient(-270deg, #8385a1, #4f5270);
     color: #fff;
+    word-break: break-all;
 }
 .incoming-message .message__author{
     margin-bottom: 10px;
@@ -222,3 +214,25 @@
 .sent-message{
     animation: sentAni 0.5s linear forwards;
 }
+
+.url-area{
+    box-shadow: 0px 6px 16px rgba(0,0,0,0.1);
+    border-radius: 30px;
+    overflow: hidden;
+}
+.url-area .img-area{
+    display: block;
+    width: 100%;
+    height: 100px;
+    background: url(../img/man2.png) 0 0 no-repeat;
+    background-size: cover;
+}
+.url-area .url-text{
+    background-color: #fff;
+    display: block;
+    width: 100%;
+    padding: 20px;
+    font-size: 14px;;
+}
+.url-area .url-text em{color: #999; font-size: 12px;display: block; margin-top: 10px;;}
+.message__bubble a{color: blue; text-decoration: underline;}
