--- a/css/find.css
+++ b/css/find.css
@@ -31,11 +31,11 @@
 .find .find__recommended{
     margin-top: 30px;
     padding-top: 30px;
-    border-top: 1px solid #f7f7f7;
+    border-top: 1px solid #efefef;
 }
 
 .find .find__title{
-    font-size: 12px;
-    opacity: 0.7;
+    font-size: 14px;
+    opacity: 0.6;
     margin-bottom: 20px;
 }
