--- a/css/friend.css
+++ b/css/friend.css
@@ -9,7 +9,7 @@
     height: 50px;
     border-radius:40%;
 }
-.friend .avatar-group-2{
+.friend .avatar-group{
     width: 50px;
     height: 50px;
     overflow: hidden;
@@ -18,23 +18,54 @@
     align-items: center;
     margin-right: 15px;
 }
-.friend .avatar-group-2 .g-avatar{
-    width: 25px;
-    height: 25px;
+.friend .avatar-group .g-avatar{
+    width: 35px;
+    height: 35px;
     margin-right: 0;
+    border: 3px solid #fafafa;
 }
-.friend .avatar-group-2 .g-avatar:nth-child(1){
+
+.friend .avatar-group .g-avatar:nth-child(1){
     align-self: flex-start;
     position: relative;
     top: 3px;
-    left: 3px;
+    left: 7px;
 }
 
-.friend .avatar-group-2 .g-avatar:nth-child(2){
+.friend .avatar-group .g-avatar:nth-child(2){
     align-self: flex-end;
     position: relative;
     bottom: 3px;
-    right: 3px;
+    right: 7px;
+}
+.friend .avatar-group.g3{
+    display: block;
+    position: relative;
+}
+.friend .avatar-group.g3 .g-avatar{
+    width: 30px;
+    height: 30px;
+}
+.friend .avatar-group.g3 .g-avatar:nth-child(1){
+    align-self: unset;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -15px;
+    z-index: 1;
+}
+.friend .avatar-group.g3 .g-avatar:nth-child(2){
+    align-self: unset;
+    position: absolute;
+    bottom: -2px;
+    left: -2px;
+}
+.friend .avatar-group.g3 .g-avatar:nth-child(3){
+    align-self: unset;
+    position: absolute;
+    bottom: -2px;
+    right: -2px;
+
 }
 .friend--lg .g-avatar{
     width: 70px;
@@ -42,6 +73,23 @@
 
 }
 
+.friend .avatar-group.g4{
+    align-content: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    position: relative;
+}
+
+.friend .avatar-group.g4 .g-avatar{
+    width: 20px;
+    height: 20px;
+    border: 0;
+}
+.friend .avatar-group.g4 .g-avatar:nth-child(1),
+.friend .avatar-group.g4 .g-avatar:nth-child(2){
+    align-self: unset; position: static;
+    margin-bottom: 3px;;
+}
 .friend .friend__column{
     display: flex;
     align-items: center;
@@ -54,7 +102,7 @@
 .friend__content .friend__name{
     display: block;
     margin-bottom: 5px;
-    font-weight: 600;
+    font-weight: 500;
 }
 .friend .chat__timestemp,
 .friend__content .friend__status,
@@ -94,4 +142,11 @@
     border-radius: 5px;
     font-size: 13px;
     color: rgba(0,0,0,0.8);
+}
+
+.friend{
+    border: 0;
+    border-bottom: 1px solid #efefef;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
 }
