--- a/css/friends.css
+++ b/css/friends.css
@@ -1,13 +1,13 @@
 .friends .fridens__header{
     padding-bottom: 20px;
 }
-
+/* 
 .friends .friends__plus{
     padding: 20px 0;
     border-top: 1px solid #efefef;
     border-bottom: 1px solid #efefef;
     margin: 20px 0;
-}
+} */
 
 .friends__plus .friends__title,
 .friends__list .friends__title{
