--- a/css/header.css
+++ b/css/header.css
@@ -25,3 +25,16 @@
     margin-right: 20px;
 
 }
+.header-padding{
+    padding-top: 100px;
+}
+
+.header-wrap{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width:100%;
+    background: rgba(255,255,255,0.9);
+    box-shadow: 0px 6px 16px rgba(0,0,0,0.05);
+    z-index: 1;
+}
