--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -4,8 +4,8 @@
     padding: 20px 0;
     bottom: 0;
     left: 0;
-    background-color: #fcfcfc;
-    border-top: 1px solid #f7f7f7;
+    background-color: #fff;
+    box-shadow: 0px -6px 16px rgba(0,0,0,0.05);
     box-sizing: border-box;
 }
 
@@ -78,10 +78,10 @@
     animation-duration: 2s;
 }
 
-i{
+.nav i{
     cursor: pointer;
-    transition: 0.2s all;
+    transition: 0.2s background;
 }
-i:hover{
+.nav i:hover{
     color: #dc5d46;
 }
