--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,500,700&display=swap');
+
 @import "reset.css";
 @import "status-bar.css";
 @import "header.css";
@@ -19,7 +21,8 @@ body{
     padding: 0;
     margin: 0 auto;
     color: #020202;
-    font-family: "Open Sans", -apple-system, sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 300;
 }
 
 .status-bar,
@@ -30,8 +33,7 @@ main,
 }
 main{
     padding-top: 30px;
-    background: #fafafa;
-    border-top: 1px solid #efefef;
+    background: #fff;
     height: 100vh;
 }
 
